# tweaktrak-wrapper

./: .gitignore  NOTICE  README.md
.github/: WORKFLOWS.md  allowed-domains.txt  site-baseline.json
.github/workflows/: build.yml  update-baseline.yml
electron/: electron-builder.yml  main.js  package.json
scripts/: fetch-site.bat  fetch-site.sh  scan-delta.sh  smoke-electron.sh  smoke-tauri-unix.sh  smoke-tauri.ps1  verify-site.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  midi.rs  midi_polyfill.js  midi_shim.js  smoke_bootstrap.js
