[package]
name = "tweaktrak-wrapper"
version = "0.1.0"
edition = "2021"
description = "TweakTrak desktop wrapper"
license = "Unlicense"

# Android requires a cdylib target; desktop builds use the bin target (main.rs).
# Both coexist: cargo picks the right one per platform.
[lib]
name = "tweaktrak_wrapper_lib"
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
# `smoke` compiles in the runtime smoke probe used by the
# smoke-tauri-windows CI gate. It adds a `__tweaktrak_smoke_report`
# IPC command + an on_page_load script injection that captures
# console / runtime errors and posts a JSON report. Behind a feature
# flag so release binaries are unchanged.
smoke = []

[profile.release-ci]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
