[package]
name = "tweaktrak-wrapper"
version = "0.1.0"
edition = "2021"
description = "TweakTrak desktop wrapper"
license = "Unlicense"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }

# MIDI polyfill back-end — not needed on Windows because WebView2 (Chromium)
# ships a native Web MIDI implementation; Tauri on macOS and Linux uses
# WKWebView / WebKitGTK which have no Web MIDI support.
[target.'cfg(not(target_os = "windows"))'.dependencies]
midir = "0.10"

[features]
# `smoke` compiles in the runtime smoke probe used by the
# smoke-tauri-windows CI gate. It adds a `__tweaktrak_smoke_report`
# IPC command + an on_page_load script injection that captures
# console / runtime errors and posts a JSON report. Behind a feature
# flag so release binaries are unchanged.
smoke = []

[profile.release-ci]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
