[package]
name = "tweaktrak-wrapper"
version = "0.1.0"
edition = "2021"
description = "TweakTrak desktop wrapper"
license = "Unlicense"

# Android requires a cdylib target; desktop builds use the bin target (main.rs).
# Both coexist: cargo picks the right one per platform.
[lib]
name = "tweaktrak_wrapper_lib"
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }

# MIDI polyfill back-end — desktop-only (macOS and Linux).
# Windows: WebView2 (Chromium) ships native Web MIDI; no polyfill needed.
# Android: uses the native MidiPlugin (USB/BLE); midir has no Android backend.
[target.'cfg(not(any(target_os = "windows", target_os = "android")))'.dependencies]
midir = "0.10"

[features]
# `smoke` compiles in the runtime smoke probe used by the
# smoke-tauri-windows CI gate. It adds a `__tweaktrak_smoke_report`
# IPC command + an on_page_load script injection that captures
# console / runtime errors and posts a JSON report. Behind a feature
# flag so release binaries are unchanged.
smoke = []

[profile.release-ci]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
